infrastructure/gitops/apps/redis/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cache
  labels:
    name: cache
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.34
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.34
